--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Global cinema - онлайн-кинотеатр</title>
 
-	<link rel="icon" href="img/me.svg">
+	<link rel="icon" href="img/favicon.ico">
 
 	<link rel="stylesheet" href="style/style.css">
 
+	<script src="./js/script.js" type="module"></script>
 
 </head>
 
@@ -40,19 +41,7 @@
 	</header>
 
 	<main>
-		<section class="film-week">
-			<div class="container film-week__container" data-rating="0">
-				<div class="film-week__poster-wrapper">
-					<img class="film-week__poster"
-						src="https://www.themoviedb.org/t/p/w1920_and_h800_multi_faces/vIPIyTJqcgOKgKcExCvTDpLpTYW.jpg"
-						alt="постер Человек-паук: Нет пути домой">
-					<p class="film-week__title_origin">Spider-Man: No Way Home</p>
-				</div>
-				<h2 class="film-week__title">Человек-паук: Нет пути домой</h2>
-				<a class="film-week__watch-trailer tube" href="https://youtu.be/V0hagz_8L3M"
-					aria-label="смотреть трейлер"></a>
-			</div>
-		</section>
+		<section class="film-week"></section>
 
 		<section class="other-films">
 			<div class="container">
@@ -212,6 +201,6 @@
 
 </body>
 
-<script src="./js/script.js" type="module"></script>
+
 
 </html>
