--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Global cinema - онлайн-кинотеатр</title>
+	<title>Methed cinema - онлайн-кинотеатр</title>
 
-	<link rel="icon" href="img/favicon.ico">
+	<link rel="icon" href="img/me.svg">
 
 	<link rel="stylesheet" href="style/style.css">
 
@@ -19,7 +19,7 @@
 	<header class="header">
 		<div class="container header__container">
 			<p class="header__logo">
-				<span class="header__logo-primary">Global</span> Cinema
+				<span class="header__logo-primary">Methed</span> Cinema
 			</p>
 
 			<form class="header__search-form" action="#">
@@ -117,7 +117,7 @@
 		<div class="container footer__container">
 			<div class="footer__column contacts">
 				<p class="contacts__logo">
-					<span class="contacts__logo-primary">Global</span> Cinema
+					<span class="contacts__logo-primary">Methed</span> Cinema
 				</p>
 
 				<p class="contacts__description">онлайн-кинотеатр</p>
@@ -161,7 +161,8 @@
 
 			<div class="footer__column partners">
 				<img class="partners__me" src="img/me.svg" alt="Логотип MethEd">
-				<p class="partners__description">OOO "Global Cinema"</p>
+				<p class="partners__description">Исследования осуществляются ООО «МЕТЭД ДЕВЕЛОПМЕНТ» при&nbsp; поддержке
+					Фонда «SPB Tech»"</p>
 			</div>
 		</div>
 	</footer>
