--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<title>Global cinema - онлайн-кинотеатр</title>
 
 	<link rel="icon" href="img/favicon.ico">
-
 	<link rel="stylesheet" href="style/style.css">
-
+	<link rel="stylesheet" href="js/videotube/videotube.min.css">
+	<script src="./js/videotube/videotube.min.js"></script>
 	<script src="./js/script.js" type="module"></script>
 
 </head>
