fix: error - div not allowed as child for botton

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<input class="header__search-input" type="search" name="search" autofocus autocomplete="off"
 					placeholder="Поиск">
 				<button class="header__search-erase erase">
-					<div class="erase__content"></div>
+					<span class="erase__content"></span>
 				</button>
 			</form>
 
@@ -107,7 +107,7 @@
 			</div>
 
 			<div class="footer__column partners">
-				<img class="partners__me" src="img/me.svg" alt="Логотип MethEd">
+				<p class="partners__logo">GC</p>
 				<p class="partners__description">OOO "Global Cinema"</p>
 			</div>
 		</div>
